vcaa.vic.edu.au (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2603,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.05,
  "homepage_snapshot_redirected_domain": "vcaa.vic.edu.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002150008id_/http://www.vcaa.vic.edu.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002150008id_/http%3A//vcaa.vic.edu.au",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "vcaa.vic.edu.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231212732id_/http%3A//www.vcaa.vic.edu.au/vcaa/footer/privacy.html",
  "policy_title": null,
  "policy_url": "vcaa.vic.edu.au/vcaa/footer/privacy.html",
  "sha1": "8147c12c3f305b830efb296e98863c01f0047c2d",
  "simhash": 15653939968060658452,
  "simhash_updated": true,
  "site_hostname": "vcaa.vic.edu.au",
  "site_url": "http://vcaa.vic.edu.au",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071231212732",
  "word_count": 388,
  "year": 2007
}

--- a/v/vc/vca/vcaa.vic.edu.au.html
+++ b/v/vc/vca/vcaa.vic.edu.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vcaa.vic.edu.au privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623111358id_/http%3A//www.vcaa.vic.edu.au/vcaa/footer/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vcaa.vic.edu.au privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231212732id_/http%3A//www.vcaa.vic.edu.au/vcaa/footer/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><script language="JavaScript" type="text/javascript">
@@ -105,7 +105,7 @@ velsOver.src="/images/VELS_BUTTON_OVER.gif"
         <meta name="DC.Rights" content="http://www.vcaa.vic.edu.au/footer/copyright.html">
         <meta name="DC.type" content="Information ">
         <link type="text/css" rel="stylesheet" href="/css/VCAA_STYLE_SHEET.css">
-    </head>
+    <script language="javascript" type="text/javascript" src="https://www.eduweb.vic.gov.au/include/web-analytics/webcount.js"></script></head>
     <body>
 
 <table cellpadding="0" cellspacing="0" width="745">
@@ -424,51 +424,66 @@ of Information to other Organisations</a>
 		<img src="/images/vic_logo.gif" width="47" height="34" align="right" border="0" alt="State Government of Victoria logo - link to Government home"></a></div>
                 </td>
             </tr>
-        </tbody></table><!-- Start RedSheriff Survey Code -->
-<script language="JavaScript1.2" type="text/javascript"><!--
-	var _rsCI="qt0132"; 
-	var _rsSV=""; var _rsSM=1.0;
-	var _iwiT = "130px";  // postion top
-	var _iwiL = "287px";  // postion Left
-	var _rsLP=location.protocol.indexOf('https')>-1?'https:':'http:';
-	var _rsND=_rsLP+'//secure-au.imrworldwide.com/';
-_rsCL='<scr'+'ipt language="JavaScript" type="text/javascript" src="'+_rsND+'cdsc.js"><\/scr'+'ipt>';
-document.write(_rsCL);
-//--></script><script language="JavaScript" type="text/javascript" src="https://secure-au.imrworldwide.com/cdsc.js"></script>
-<!-- END RedSheriff Survey Code -->
+        </tbody></table><!-- Web Analytics Counting Script
+
+ For further information regarding scripts contact Online Collaboration Unit
+
+Begin Script -->
+
+<script language="javascript1.1" type="text/javascript">
+
+ 
+
+function include_dom(script_filename) {
+
+ 
+
+    var html_doc = document.getElementsByTagName('head').item(0);
+
+ 
+
+    var js = document.createElement('script');
+
+ 
+
+    js.setAttribute('language', 'javascript');
+
+ 
+
+    js.setAttribute('type', 'text/javascript');
+
+ 
+
+    js.setAttribute('src', script_filename);
+
+ 
+
+    html_doc.appendChild(js);
+
+ 
+
+    return false;
+
+}
+
+ 
+
+ 
+
+var script = "//www.eduweb.vic.gov.au/include/web-analytics/webcount.js";
+
+ 
+
+include_dom(document.location.href.indexOf('https')>-1?'https:'+script:'http:'+script);
+
+ 
+
+</script>
+
+ 
+
+<!-- End Web Analytical Script -->
 
 
-<!-- COPYRIGHT 2003 RedSheriff Limited v51 Applet -->
-<script language="JavaScript" type="text/javascript">
-<!--
-	var _rsCI="vic-dse-sofweb";
-	var _rsCG="0";
-	var _rsDT=0;
-	var _rsDU=1;
-	var _rsDO=0;
-	var _rsX6=0; 
-	var _rsSI=escape(window.location);
-	var _rsLP=location.protocol.indexOf('https')>-1?'https:':'http:';
-	var _rsRP=escape(document.referrer);
-	var _rsND=_rsLP+'//secure-au.imrworldwide.com/';
-
-	if (parseInt(navigator.appVersion)>=4)
-	{
-		var _rsRD=(new Date()).getTime();
-		var _rsSE=0;	
-		var _rsSV="";
-		var _rsSM=0;
-		_rsCL='<scr'+'ipt language="JavaScript" type="text/javascript" src="'+_rsND+'v51.js"><\/scr'+'ipt>';
-	}
-	else
-	{
-		_rsCL='<img src="'+_rsND+'cgi-bin/m?ci='+_rsCI+'&cg='+_rsCG+'&si='+_rsSI+'&rp='+_rsRP+'">';
-	}
-	document.write(_rsCL);
-//-->
-</script><script language="JavaScript" type="text/javascript" src="https://secure-au.imrworldwide.com/v51.js"></script>
-<noscript>
-	<img src="//secure-au.imrworldwide.com/cgi-bin/m?ci=vic-dse-sofweb&amp;cg=0" alt="">
-</noscript>
 
 </body></html>
