melbourneit.com.au (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 10854,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.21,
  "homepage_snapshot_redirected_domain": "melbourneit.com.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930195834id_/http://www.melbourneit.com.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930195834id_/http%3A//melbourneit.com.au",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "melbourneit.com.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231220621id_/http%3A//www.melbourneit.com.au/privacy",
  "policy_title": "Melbourne IT",
  "policy_url": "melbourneit.com.au/privacy",
  "sha1": "4065853970dee1fb9209201045be8f0c81f5e2f3",
  "simhash": 4174789141915942260,
  "simhash_updated": false,
  "site_hostname": "melbourneit.com.au",
  "site_url": "http://melbourneit.com.au",
  "smog": 15.77,
  "strict_updated": true,
  "timestamp": "20071231220621",
  "word_count": 1751,
  "year": 2007
}

--- a/m/me/mel/melbourneit.com.au.html
+++ b/m/me/mel/melbourneit.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the melbourneit.com.au privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629151802id_/http%3A//www.melbourneit.com.au/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the melbourneit.com.au privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231220621id_/http%3A//www.melbourneit.com.au/privacy) for the most accurate reproduction.-->
 
 <html><head>
       <title>Melbourne IT</title>
@@ -67,8 +67,14 @@
 <li id="submenuwedesign">
 <a href="/cc/website-design/index">Website Design</a>
 </li>
-<li id="submenuweketing">
-<a href="/cc/website-marketing/index">Website Marketing</a>
+<li id="submenuonketing">
+<a href="/cc/website-marketing/index">Online Marketing</a>
+</li>
+<li id="submenudeervers">
+<a href="/cc/dedicated-servers/index">Dedicated Servers</a>
+</li>
+<li id="submenuofetools">
+<a href="/cc/office-tools/index">Office Tools</a>
 </li>
 <li id="submenuwecurity">
 <a href="/products/digicerts/" class="last">Website Security</a>
@@ -522,13 +528,13 @@ You may access and update the personal information we provide to the registries 
 
 any time. The procedure to do this is explained on the Help Centre on our website at 
 
-<a href="http://www.inww.com/help">http://www.inww.com/help </a>
+<a href="/help">http://www.melbourneit.com.au/help </a>
 
 </p><p>
 
 If you believe that Melbourne IT may hold other personal information about you which is inaccurate, please contact us 
 
-by using this <a href="http://www.melbourneit.com.au/privacy/comment.php">web form</a> and we will take reasonable steps to ensure that it is corrected. 
+by using this <a href="/contacts/support.php?action=fillinmail&amp;subject=Privacy">web form</a> and we will take reasonable steps to ensure that it is corrected. 
 
 </p><p>
 
@@ -611,6 +617,13 @@ time to see if we have made any changes to it.
         <a href="/cc/website-design/index">Website Design</a> |
         <a href="/cc/web-hosting/index">Web Hosting</a> |
         <a href="/cc/website-marketing/index">Search Engine Optimisation</a> |
+        <a href="/cc/dedicated-servers/windows-servers">Windows Dedicated Hosting</a> | 
+        <a href="/cc/dedicated-servers/linux-servers">Linux Dedicated Hosting</a> |
+        <a href="/cc/email-services/premium-email">Hosted Exchange</a> |
+        <a href="/cc/office-tools/index">Hosted Sharepoint</a> |
+        <a href="/cc/website-marketing/email-promotions">Email Marketing</a> |
+        <a href="/cc/website-marketing/pay-per-click-advertising">Pay-Per-Click Management</a> |
+        <a href="/cc/email-services/premium-email">Hosted Microsoft Exchange</a> |
         <a href="http://www.searchzone.com.au">searchzone.com.au</a> | 
         <a href="http://www.applicationmarketplace.com.au/">Software as a Service</a>
       </p>
