--- a/b/bl/blu/bluemountain.com.html
+++ b/b/bl/blu/bluemountain.com.html
@@ -1,10 +1,12 @@
-<!--The following is the downloaded HTML source of the bluemountain.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630181912id_/http%3A//www.bluemountain.com/new_warrants.pd) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bluemountain.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231220943id_/http%3A//www.bluemountain.com/new_warrants.pd) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<meta name="agmips" content="1.144652">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta name="agmips" content="ag742">
 
-<title>Blue Mountain- Privacy Policy</title>
+	<title>Blue Mountain- Privacy Policy</title>
+	<link rel="stylesheet" type="text/css" href="http://ak.imgag.com/imgag/css/bma/agi_ecard.css">
+	<link rel="stylesheet" type="text/css" href="http://ak.imgag.com/imgag/css/bma/agi_base.css">
 <script language="JavaScript">
 <!-- HIDE FROM OLD BROWSERS
 glbStdFeatures = "width=400,height=320,resizable=yes,scrollbars=yes,toolbar=no";
@@ -155,21 +157,15 @@ function OpenNewWindow(url,winwidth,winheight,bar)
 }
 
 // NO MORE HIDING -->
-</script>
-<link rel="stylesheet" type="text/css" href="http://ak.imgag.com/imgag/css/bma/general.css">
-<link rel="stylesheet" type="text/css" href="http://ak.imgag.com/imgag/css/bma/ecard_pages.css"> 
-<style type="text/css">
-#nav_table {background-color:#FFFFFF}
-#agi-header td {background:url(http://ak.imgag.com/imgag/bma/hdr/bkgrd3.gif) no-repeat;}
-</style>
-<script type="text/javascript">var cust_ck_name = 'customer';
+</script><script type="text/javascript">var cust_ck_name = 'customer';
 var useg_ck_name = 'useg';
 var mcs_ck_name = 'mc_s';
 var mcp_ck_name = 'mc_p';</script>
 <script src="http://ak.imgag.com/imgag/js/uut.js" type="text/javascript"></script>
 </head>
 
-<body bgcolor="#DCF0F1" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0&quot;">
+<body>
+
 <a name="top"></a>
 <center>
 
@@ -178,58 +174,51 @@ var mcp_ck_name = 'mc_p';</script>
   <td align="center"></td>
 </tr>
 </tbody></table>
-<div id="agi-header">
-<script type="text/javascript" src="http://ak.imgag.com/imgag/js/bma/drop_down.js"></script>
- <table border="0" cellpadding="0" cellspacing="0">
- <tbody><tr>
- <td> 
- <!--flash header--->
-   <a id="agi-header-hover" title="BlueMountain eCards" href="http://www.bluemountain.com/index.pd"></a> 
+ <div id="agi-header">
+ <script type="text/javascript" src="http://ak.imgag.com/imgag/js/bma/drop_down.js"></script>
 
-  <div id="agi-bma-sign-in">
-   <a href="https://www.bluemountain.com/members/signin.pd?referer="><img src="http://ak.imgag.com/imgag/bma/hdr/sign-in.gif" border="0"></a><a href="http://www.bluemountain.com/fom.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/join.gif" width="45" height="13" border="0"></a>  
+  <div id="agi-logorow">
+   <div id="agi-logo">
+    <a id="agi-header-hover" title="BlueMountain eCards" href="http://www1.bluemountain.com/index.pd"></a>
+   </div>
+
+   <div id="agi-login">
+    <a href="https://www.bluemountain.com/members/signin.pd?referer="><img src="http://ak.imgag.com/imgag/bma/hdr/sign-in.gif" border="0"></a><a href="http://www.bluemountain.com/fom.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/join.gif" width="45" height="13" border="0"></a>
+   </div>
+   <br style="clear: both;">
   </div>
   
-  <div id="agi-bma-search">
-<form action="http://www.bluemountain.com/kwsearch.pd" method="get" name="Search" onsubmit="window.location=this.action+'?btnsearch=submit&amp;strSearch='+this.strSearch.value; return false;">
-  <input class="agi-bma-searchbox" onfocus="if( this.value==this.defaultValue ) this.value='';" type="text" name="strSearch" maxlength="50" value="Search eCards">
-  <div id="agi-bma-search-btn">
- <input type="image" name="btnsearch" src="http://ak.imgag.com/imgag/bma/hdr/search.gif" width="18" height="18" alt="search eCards">
+  <div id="agi-topnav">
+   <div id="agi-search">
+    <form action="http://www1.bluemountain.com/kwsearch.pd" method="get" name="Search" onsubmit="window.location=this.action+'?btnsearch=submit&amp;strSearch='+this.strSearch.value; return false;">
+     <input class="agi-bma-searchbox" onfocus="if( this.value==this.defaultValue ) this.value='';" type="text" name="strSearch" maxlength="50" value="Search eCards">
+     <div id="agi-bma-search-btn">
+     <input type="image" class="agi-search-btn" name="btnsearch" src="http://ak.imgag.com/imgag/bma/hdr/search.gif" width="18" height="18" alt="search eCards">
+     </div>
+     </form>
+     <br style="clear: both;">
+   </div>
+   <div id="agi-nav">
+    <ul>
+     <li><a href="http://www1.bluemountain.com/index.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/ecard_dn.gif" width="70" height="18" alt="eCards" border="0"></a></li>
+     <li><a href="http://www1.bluemountain.com/cnp/index_cnp.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/cnp_dn.gif" width="118" height="18" alt="Create and Print" border="0"></a></li>
+     <li><a href="http://www1.bluemountain.com/downloads/downloads.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/download_dn.gif" width="124" height="18" alt="Desktop Design" border="0"></a></li>
+     <li><a href="http://www.bluemountain.com/reminders/index.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/reminders_dn.gif" width="94" height="18" alt="Reminders" border="0"></a></li>
+     <li><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=myaccount');"><img src="http://ak.imgag.com/imgag/bma/hdr/myblue_dn.gif" width="133" height="18" border="0" alt="My BlueMountain"></a>
+      <ul>
+       <li><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=myaccount');">My Account</a></li>
+       <li><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=addressbook');">Address Book</a></li>
+       <li><a href="http://www.bluemountain.com/reminders/index.pd">Reminders</a></li>
+       <li><a href="javascript:openOfferPop();">My Favorites</a></li>
+       <li><a href="javascript:openOfferPop();">eCards Received</a></li>
+       <li><a href="javascript:openOfferPop();">Sent eCards</a></li>
+      </ul>
+     </li>
+    </ul>
+   </div>
+   <br style="clear: both;">
   </div>
-  </form>
-  </div>
- 
-<div id="agi-bma-hdr-nav" style="width:600px;">
-<ul id="agi-base-bma-hdr-nav">
-<li><img src="http://ak.imgag.com/imgag/bma/hdr/blank.gif" width="58" height="18" alt="" border="0"></li>
-<li><a href="http://www.bluemountain.com/index.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/ecard_dn.gif" width="70" height="18" alt="eCards" border="0"></a></li>
-    <li><a href="http://www.bluemountain.com/cnp/index_cnp.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/cnp_dn.gif" width="118" height="18" alt="Create and Print" border="0"></a></li>
-<li><a href="http://www.bluemountain.com/downloads.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/download_dn.gif" width="124" height="18" alt="Desktop Design" border="0"></a></li>
-
-<li><a href="http://www.bluemountain.com/reminders/index.pd"><img src="http://ak.imgag.com/imgag/bma/hdr/reminders_dn.gif" width="94" height="18" alt="Reminders" border="0"></a></li>
-
-
-    <!--drop down menu--->
-    <li id="agi-base-bma-hdr-nav-drop"><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=myaccount');"><img src="http://ak.imgag.com/imgag/bma/hdr/myblue_dn.gif" width="133" height="18" border="0" alt="My BlueMountain"></a>
-     <ul>
-      <li><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=myaccount');">My Account</a></li>
-      <li><a href="javascript:openJoin('http://www.bluemountain.com/popup/register.pd?app=addressbook');">Address Book</a></li>
-      <li><a href="http://www.bluemountain.com/reminders/index.pd">Reminders</a></li>
-      <li><a href="javascript:openOfferPop();">My Favorites</a></li>
-      <li><a href="javascript:openOfferPop();">eCards Received</a></li>
-      <li><a href="javascript:openOfferPop();">Sent eCards</a></li>
-     </ul>
-    </li>
-   </ul>
-   <!--END drop down menu--->
-  </div>
- 
- </td>
- 
- </tr>
- </tbody></table>
-
-</div>
+ </div>
 
 <table align="center" border="0" cellpadding="0" cellspacing="0" width="770"> 
   <tbody><tr>
@@ -383,28 +372,32 @@ As always, if you have any questions, please feel free to contact us at <a href=
 </tbody></table>
 
 
-<div id="agi-footer">
-<div id="agi-footer-mont"><img src="http://ak.imgag.com/imgag/bma/mont_ftr.gif"></div>
-<p>
-<a href="http://www.bluemountain.com/customer/index.pd">Help - Customer Service</a> |  <a href="JavaScript:OpenNewWindow('/advertise.pd','500','300','no')">Advertise on Blue Mountain</a> |  <a href="http://www.bluemountain.com/share/affiliate.pd">Affiliate Program</a> | <a href="http://www.bluemountain.com/siteindex.pd">eCard Site Map</a> | <a href="http://www.bluemountain.com/cnp/siteindex.pd?cpl1=27604">Create &amp; Print Site Map</a> | <a href="http://www.bluemountain.com/findit.pd">eCard Pick Up</a><br>&nbsp;<br>BlueMountain.com is a service of  <img src="http://ak.imgag.com/imgag/bma/ag_interactive.gif" width="89" height="31" border="0" align="abstop">.  <br>
-Copyright © 1996-2006 AG.com, Inc. All rights reserved.<br>&nbsp;<br><a href="http://www.bluemountain.com/legal.pd">Terms of Service</a> | <a href="http://www.bluemountain.com/new_warrants.pd">Privacy Policy</a><br>&nbsp;<br>
-Visit our friends at: <a href="http://www.egreetings.com" target="_blank">Egreetings.com</a> | <a href="http://www.kiwee.com" target="_blank">Kiwee</a> | <a href="http://www.bluemountaincards.co.uk/index.pd?source=uk100" target="_blank">BlueMountain UK</a>&nbsp;<img src="http://ak.imgag.com/imgag/bma/uk_flag.gif" width="25" height="13" border="0" align="absmiddle"></p>
+<div id="agi-footer"><div id="agi-footer-mont"><img src="http://ak.imgag.com/imgag/bma/mont_ftr.gif"></div>
+
+ <p><img src="http://ak.imgag.com/imgag/bma/footer/protect.gif" border="0" width="15" height="15" alt="How we protect you" style="vertical-align: middle;"><b>Wondering if the ecard you received is valid? <a href="http://www.bluemountain.com/emailprotection/index.pd">Read how we protect you.</a></b></p>
+
+ <p><a href="http://www.bluemountain.com/help/index.pd">Help - Customer Service</a> |  <a href="JavaScript:OpenNewWindow('/advertise.pd','500','300','no')">Advertise on Blue Mountain</a> |  <a href="http://www.bluemountain.com/share/affiliate.pd">Affiliate Program</a> | <a href="http://www.bluemountain.com/siteindex.pd">eCard Site Map</a> | <a href="http://www.bluemountain.com/cnp/siteindex.pd?cpl1=27604">Create &amp; Print Site Map</a> | <a href="http://www.bluemountain.com/findit.pd">eCard Pick Up</a></p>
+ <div id="agi-footer-cares"><a href="http://www.bluemountain.com/cares/"><img src="http://ak.imgag.com/imgag/bma/BMACaresFooter.jpg" border="0"></a></div>
+ <p>BlueMountain.com is a service of  <img src="http://ak.imgag.com/imgag/bma/ag_interactive.gif" width="89" height="31" border="0" align="abstop">.<br>
+ Copyright © 1996-2007 AG.com, Inc. All rights reserved.</p>
+ <p><a href="http://www.bluemountain.com/legal.pd">Terms of Service</a> | <a href="http://www.bluemountain.com/new_warrants.pd">Privacy Policy</a></p>
+ <p>Visit our friends at: <a href="http://www.webshots.com/" target="_blank">Webshots</a> | <a href="http://www.kiwee.com" target="_blank">Kiwee</a> | <a href="http://www.bluemountaincards.co.uk/index.pd?source=uk100" target="_blank">BlueMountain UK</a>&nbsp;<img src="http://ak.imgag.com/imgag/bma/uk_flag.gif" width="25" height="13" border="0" align="absmiddle"></p>
 </div>
 <br><br><br><br>
 </center>
 
 
-<!-- page generated: Sat Jun 30 14:19:12 2007 -->
+<!-- page generated: Mon Dec 31 17:09:43 2007 -->
 
 
 <script type="text/javascript" src="http://ak.imgag.com/imgag/js/omniture/extras.js"></script>
-<!-- SiteCatalyst code version: G.7.
+<!-- SiteCatalyst code version: G.7.  -New
 Copyright 1997-2004 Omniture, Inc. More info available at
 http://www.omniture.com -->
 <script language="JavaScript">//<!--
 var ingroup=omniture.inTrackingSample();
 var s_pageName="/new_warrants.pd";
-var s_server="ag462";
+var s_server="ag742";
 var s_channel="Ecards";
 var s_pageType="";
 var s_prop1="";
@@ -413,13 +406,14 @@ var s_prop3="W";
 var s_prop4="";
 var s_prop5="";
 var s_prop6="";
-var s_prop7="A|A";
+var s_prop7="A|B";
 var s_prop8="";
 var s_prop9="";
 var s_prop10="bma";
 var s_prop11="";
 var s_prop12="";
 var s_prop13="";
+var s_prop14="";
 var s_campaign="";
 var s_events="";
 var s_products="";
@@ -430,7 +424,7 @@ var s_eVar4="afu";
 var s_eVar5="bma";
 var s_eVar6="";
 var s_eVar7="";
-var s_eVar8="A|A";
+var s_eVar8="A|B";
 var s_eVar9="";
 var s_eVar10="";
 try{s_eVar3=useg;s_prop1=s_eVar3;}catch(e){s_eVar3='afu_none';s_prop1=s_eVar3;}
@@ -466,10 +460,24 @@ function do_omniture() {
 //--></script><script language="JavaScript"><!--
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
 //--></script><noscript><img
-src="http://agbmcom.112.2O7.net/b/ss/agbmcom/1/G.7--NS/0?pageName=%2Fnew_warrants.pd%7Cnst&ch=Ecards&server=ag462&c10=bma&c3=W"
+src="http://agbmcom.112.2O7.net/b/ss/agbmcom/1/G.7--NS/0?pageName=%2Fnew_warrants.pd%7Cnst&ch=Ecards&server=ag742&c10=bma&c3=W"
 height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: G.7. -->
 
+<!-- Start ClearSaleing Impression Tag -->
+<script type="text/javascript" id="cs_impression_tag">
+<!--	
+	// Version: live push 1
+	// Site: bma
+	// Enabled: True	
+	// Caching On: True
+	
+	var _csTrackURL = "http://dsa.csdata1.com/data/sample.jpeg?";
+	var _csAccountID = "3007412";
+-->
+</script>
+<script type="text/javascript" src="http://ak.imgag.com/imgag/js/clearsaleing/edata.js"></script>
+<!-- End ClearSaleing Impression Tag -->
 
 
 
