--- a/i/il/ilr/ilrg.com.html
+++ b/i/il/ilr/ilrg.com.html
@@ -1,15 +1,12 @@
-<!--The following is the downloaded HTML source of the ilrg.com privacy policy that was archived on 2007-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070612002417id_/http%3A//www.ilrg.com/terms/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ilrg.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231222759id_/http%3A//www.ilrg.com/terms/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>ILRG.com: Privacy Policy</title>
 
 <link rel="SHORTCUT ICON" href="http://www.ilrg.com/favicon2.ico"></head>
 
 
-
-<body background="http://www.ilrg.com/graphics/sidegrn.gif" bgcolor="#FFFFFF" text="#000000" vlink="#808080" alink="#C0C0C0">
-
-
+<body background="http://www.ilrg.com/graphics/sidegrn.gif" bgcolor="#FFFFFF" text="#000000" vlink="#808080" alink="#C0C0C0" style="margin-left:50px;">
 
 <p align="center"><a href="http://www.ilrg.com/" border="0">
 <img src="http://www.ilrg.com/graphics/ilrg_ban.gif" border="0" hspace="2" vspace="2" width="560" height="77"></a></p>
@@ -32,17 +29,13 @@ Other: <a href="http://www.ilrg.com/store/">Bookstore</a> | <a href="http://www.
 </tbody></table>
 </center>
 
-
 <center>
-<blockquote>
-
 <img border="0" src="http://www.ilrg.com/graphics/advertisement.gif" width="120" height="10"><br>
-
 <!-- TF 468x60 JScript HORIZ NoAD code -->
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&adSpace=ROS&size=468x60&type=horiz&noAd=1&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;noAd=1&amp;requestID=20274851120.23249972338852465"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;noAd=1&amp;requestID=20274883630.9538932385214358"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=InternetLegalResourceGuide&adSpace=ROS&size=468x60&requestID=977523558" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=InternetLegalResourceGuide&adSpace=ROS&size=468x60&requestID=977523558" 
@@ -54,16 +47,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 
 <tt><b><font size="-5">Support The Internet Legal Research Group; Visit Our Advertisers</font></b></tt>
-
-</blockquote></center>
+</center>
 
 <div align="left">
-  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="95%" id="AutoNumber1">
-  <tbody><tr>
+  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber1">
+  <tbody><tr id="_stVar04d">
     <td width="100%">
     <hr size="1"></td>
-    <td width="42" valign="top">
-&nbsp;</td>
+    <td width="42" valign="top">&nbsp;
+</td>
     <td width="120" valign="top">
 </td>
   </tr>
@@ -82,7 +74,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 		</td>
 		<td><a href="http://www.truste.org/ivalidate.php?url=www.ilrg.com&amp;sealid=101">
-		<img border="0" src="http://www.ilrg.com/terms/clickseal.gif" width="91" height="73" align="bottom"></a></td>
+		<img border="0" src="http://www.ilrg.com/terms/truste_seal_ctv.gif" width="68" height="95" align="bottom"></a></td>
 	</tr>
 </tbody></table>
 
@@ -346,17 +338,19 @@ document.location.href="mailto:"+email;
 
 <br>
     
-    </td>
-    <td width="42">
-&nbsp; </td>
+    
+    </td><td width="42">&nbsp;
+ </td>
     <td width="120" valign="top">
+<center id="_stTribalHoriz">
 <img border="0" src="http://www.ilrg.com/graphics/advertisement.gif" width="120" height="10"><br>
+
 
 <!-- TF 120x600 JScript NoAD code -->
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&adSpace=ROS&size=120x600&noAd=1&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&amp;adSpace=ROS&amp;size=120x600&amp;noAd=1&amp;requestID=20274851860.08433974976499203"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=InternetLegalResourceGuide&amp;adSpace=ROS&amp;size=120x600&amp;noAd=1&amp;requestID=20274883680.7922572824273333"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=InternetLegalResourceGuide&adSpace=ROS&size=120x600&requestID=481900567" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=InternetLegalResourceGuide&adSpace=ROS&size=120x600&requestID=481900567" 
@@ -365,8 +359,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 </center>
 <!-- TF 120x600 JScript NoAD code -->
 
-
-
+</center>
 
 <br>
 
@@ -374,10 +367,12 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 
     </td>
+  
+
+
   </tr>
 </tbody></table>
 
-</div>
 
 
 
@@ -415,8 +410,8 @@ document.location.href="mailto:"+email;
 
 
 <p>
-</p><hr size="1">
-
+<span>
+</span></p><hr size="1">
 
 
 
@@ -441,6 +436,8 @@ your firm, and sign-up today!&nbsp;
 <style><!--
 .vFont{font:12px Arial; color:#000000}
 //--></style>
+
+<span>
 <table align="center" border="0" bgcolor="#eeeeee" cellpadding="3" cellspacing="0" style="border: white outset 0px;">
 <form action="http://www.ilrg.com/cgi-bin/poll/vote.cgi?cast=1164126482" method="post" name="A1164126503"></form>
 <input type="Hidden" name="id" value="1164126482">
@@ -459,12 +456,12 @@ your firm, and sign-up today!&nbsp;
 <form action="http://www.ilrg.com/cgi-bin/poll/vote.cgi?view=1164126482" method="post"></form>
 <input type="Hidden" name="id" value="1164126482">
 <th width="150"><input type="Submit" value="  View Results  " style="width:100%;cursor:hand;" width="150"></th>
-</tr>
-</tbody></table>
 
+</tr></tbody></table>
+</span>
 
 </p><p align="center"><span style="font-family: Arial"><font size="1">©</font></span><font face="Arial" size="1"> 1995-2007 Internet Legal Research Group<br>
-A product of Maximilian Ventures LLC<br>
+<span id="_stFoot">A product of</span> Maximilian Ventures LLC<br>
 Reproduction in whole or in part without permission is prohibited.<br> 
 <br>
 
@@ -476,14 +473,14 @@ Reproduction in whole or in part without permission is prohibited.<br>
 | <a href="http://www.ilrg.com/terms/">Terms of Use</a> 
 | <a href="http://www.ilrg.com/terms/privacy.html">Privacy Policy</a><br></font></p>
 
-<p align="center"><a href="http://www.ilrg.com/terms/privacy.html"><img border="0" src="http://www.ilrg.com/terms/finalmark.gif" width="116" height="31"></a>
+<p align="center"><a href="http://www.ilrg.com/terms/privacy.html"><img border="0" src="http://www.ilrg.com/terms/truste_seal_web.gif" width="171" height="47"></a>
 </p>
 
 
 
-
+<span id="_stRateJS">
 
 <script language="Javascript" src="http://www.ilrg.com/rating/rate2.js"></script>
-
+</span>
  
-</body></html>
+</div></body></html>
