--- a/s/su/sup/supply.com.html
+++ b/s/su/sup/supply.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the supply.com privacy policy that was archived on 2007-05-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070519041920id_/http%3A//supply.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the supply.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231230345id_/http%3A//www.supply.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Supply Technology_Privacy Statement</title>
