--- a/i/in/ind/indiaboard.com.html
+++ b/i/in/ind/indiaboard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indiaboard.com privacy policy that was archived on 2007-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070419104356id_/http%3A//www.indiaboard.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indiaboard.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231234613id_/http%3A//indiaboard.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Welcome to Indiaboard.com Free Classifieds for Indians</title>
