--- a/d/di/dir/directspace.net.html
+++ b/d/di/dir/directspace.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the directspace.net privacy policy that was archived on 2007-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229020836id_/http%3A//directspace.net/terms/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the directspace.net privacy policy that was archived on 2008-01-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080106075502id_/http%3A//directspace.net/terms/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <link rel="shortcut icon" href="http://directspace.net/images/favicon.ico">
@@ -82,10 +82,7 @@ If you choose to use our referral service to tell a friend about our site, we wi
                         </tbody></table></td>
           </tr>
           <tr>
-            <td height="96" align="left" valign="top" style="border-top:5px solid #0F527B "><div class="style5" style="padding-left:23px; padding-top:11px"><a href="http://directspace.net" class="style6">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://directspace.net/aboutus/" class="style6">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://directspace.net/hosting/hosting.htm" class="style6">Hosting</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://directspace.net/domains/" class="style6">Domains</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://directspace.net/support/" class="style6">Support</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://directspace.net/contacts/" class="style6">Contacts</a></div>              <div style="padding-left:23px; padding-top:3px">
-                  <p class="style5">DirectSpace Networks, Inc. An EVIIS Company © 2001 : 2006. <a href="http://directspace.net/terms/privacy.htm" class="style7" style="text-decoration:underline ">Privacy Policy</a></p>
-                  <p class="style5">&nbsp;</p>
-              </div></td>
+            <td height="96">&nbsp;</td>
           </tr>
         </tbody></table></td>
       </tr>
