--- a/c/ca/cak/cakemail.com.html
+++ b/c/ca/cak/cakemail.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cakemail.com privacy policy that was archived on 2007-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071206021727id_/http%3A//www.cakemail.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cakemail.com privacy policy that was archived on 2008-01-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080106215634id_/http%3A//www.cakemail.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -195,7 +195,10 @@
 
   	<a href="contacts.html">Contacts</a> | <a href="http://www.cakemail.com/api">API documentation</a> | <a href="https://demo.cakemail.com/signin.php" title="Login">Login</a> | <strong>Privacy policy</strong> | <a href="antispam-policy.html">Anti-Spam policy</a> | <a href="http://www.thecodekitchen.com/blog/category/cake/">Blog</a>
 
-    <p>© 2007 <a href="http://www.thecodekitchen.com" target="_blank">The Code Kitchen Inc.</a> - All Rights Reserved</p>
+    <p>
+        © 2007 <a href="http://www.cakemail.com" target="_blank">CakeMail Inc</a>. - All Rights Reserved<br>
+        CakeMail is part of <a href="http://www.thecodekitchen.com" target="_blank">The Code Kitchen</a> family.
+      </p>
 
   </div>
 
