--- a/m/me/med/mediawebconnect.com.html
+++ b/m/me/med/mediawebconnect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mediawebconnect.com privacy policy that was archived on 2007-11-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071101121635id_/http%3A//mediawebconnect.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mediawebconnect.com privacy policy that was archived on 2008-01-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080108125124id_/http%3A//mediawebconnect.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title> - 50 Off</title>
@@ -88,6 +88,7 @@ Children are not eligible to use our website and we ask that minors (under the a
     </tbody></table>
     <!-- END OF content column -->
     <div id="footer">
+<a href="www.mediawebconnect.com">www.mediawebconnect.com</a>
           </div>
   </div>
 <!--  <div id="banner">&nbsp; -->
