tylenol.com (archived on 2008-01-11)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 9282,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.81,
  "homepage_snapshot_redirected_domain": "tylenol.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080403044546id_/http://tylenol.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080403044546id_/http%3A//tylenol.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "tylenol.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080111134155id_/http%3A//tylenol.com/vcrc/privacy.jhtml",
  "policy_title": "Privacy Policy",
  "policy_url": "tylenol.com/vcrc/privacy.jhtml",
  "sha1": "63ccc04395214ee5e956c0fe4c8afbacdd13e978",
  "simhash": 3299333839609076620,
  "simhash_updated": false,
  "site_hostname": "tylenol.com",
  "site_url": "http://tylenol.com",
  "smog": 16.16,
  "strict_updated": false,
  "timestamp": "20080111134155",
  "word_count": 1474,
  "year": 2008
}

--- a/t/ty/tyl/tylenol.com.html
+++ b/t/ty/tyl/tylenol.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tylenol.com privacy policy that was archived on 2007-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071212023715id_/http%3A//www.tylenol.com/vcrc/privacy.jhtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tylenol.com privacy policy that was archived on 2008-01-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080111134155id_/http%3A//tylenol.com/vcrc/privacy.jhtml) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 
@@ -309,7 +309,7 @@
 				
 				<img height="5" src="/images/tylenol/spacer.gif" width="10">
 
-				<a onmouseover="rollover('nav_healthcare');" onmouseout="rollout('nav_healthcare');" href="http://www.tylenolprofessional.com/tylenolprofessional"><img height="10" src="/images/tylenol/nav_healthcare_off.gif" width="142" border="0" name="nav_healthcare"></a>
+				<a onmouseover="rollover('nav_healthcare');" onmouseout="rollout('nav_healthcare');" href="http://www.tylenolprofessional.com/tylenolprofessional/"><img height="10" src="/images/tylenol/nav_healthcare_off.gif" width="142" border="0" name="nav_healthcare"></a>
 
 				
 			</div>
