--- a/v/ve/vel/velonews.com.html
+++ b/v/ve/vel/velonews.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the velonews.com privacy policy that was archived on 2007-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071213070709id_/http%3A//velonews.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the velonews.com privacy policy that was archived on 2008-01-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080112123137id_/http%3A//www.velonews.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Inside Communications Privacy Policy</title>
