gowealthy.com (archived on 2008-01-12)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 15045,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.36,
  "homepage_snapshot_redirected_domain": "gowealthy.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080316044920id_/http://www.gowealthy.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080316044920id_/http%3A//gowealthy.com",
  "interval": "2008_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gowealthy.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080112154244id_/http%3A//www.gowealthy.com/site/policy/index.asp",
  "policy_title": "Policy :: Gowealthy.com",
  "policy_url": "gowealthy.com/site/policy/index.asp",
  "sha1": "b80daf3dba3d578b420b27177a3d5c200b5b07b0",
  "simhash": 18369232275792881246,
  "simhash_updated": false,
  "site_hostname": "gowealthy.com",
  "site_url": "http://gowealthy.com",
  "smog": 13.87,
  "strict_updated": false,
  "timestamp": "20080112154244",
  "word_count": 2342,
  "year": 2008
}

--- a/g/go/gow/gowealthy.com.html
+++ b/g/go/gow/gowealthy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gowealthy.com privacy policy that was archived on 2007-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071213084114id_/http%3A//www.gowealthy.com/site/policy/index.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gowealthy.com privacy policy that was archived on 2008-01-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080112154244id_/http%3A//www.gowealthy.com/site/policy/index.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Policy :: Gowealthy.com</title>
@@ -59,24 +59,12 @@ urchinTracker();
         </tr>
 			
 		<tr align="center" valign="top">
-          <td height="151" colspan="2" background="/member/images/tbbg.jpg"><table width="21%" height="23" border="0" cellpadding="0" cellspacing="0">
+          <td height="151" colspan="2"><table width="21%" height="23" border="0" cellpadding="0" cellspacing="0">
             <tbody><tr>
-              <td><div align="center">
-                <script type="text/javascript">
-AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0','width','183','height','256','src','/realestate/uae/dubai/thelakes/images/top','quality','high','pluginspage','http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash','wmode','Transparent','movie','/realestate/uae/dubai/thelakes/images/top' ); //end AC code
-                </script>
-                <noscript>
-                <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0" width="183" height="256">
-                  <param name="movie" value="/realestate/uae/dubai/thelakes/images/top.swf" />
-                  <param name="quality" value="high" />
-                  <param name="Wmode" value="Transparent" />
-                  <embed src="/realestate/uae/dubai/thelakes/images/top.swf" width="183" height="256" quality="high" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" wmode="Transparent"></embed>
-                </object>
-                </noscript>
-              </div></td>
+              <td><div align="center"><a href="/realestate/uae/ajman/goldcrestbv/index.asp"><img src="/images/general/top_prop/top_prop_goldcrestbusinessvistas_lfttab.jpg" alt="Goldcrest Business Vistas" width="200" height="260" border="0"></a></div></td>
             </tr>
           </tbody></table>
-            <!--  <a href="/realestate/uae/ajman/goldcrestdreams3/index.asp"><img src="/images/general/goldcrestdreams3.jpg" alt="Goldcrest Dreams III" width="200" height="249" border="0"></a>--></td>        
+          <!--  <a href="/realestate/uae/ajman/goldcrestdreams3/index.asp"><img src="/images/general/goldcrestdreams3.jpg" alt="Goldcrest Dreams III" width="200" height="249" border="0"></a>--></td>        
 		</tr>
     </tbody></table></td>
   </tr>
@@ -379,17 +367,18 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
       <tr align="center">
         <td height="40" colspan="3" class="TD_10px"><table width="100%" border="0">
           <tbody><tr>
-            <td height="70"><div align="center"><span class="style8">GOWEALTHY.COM © 2007. ALL RIGHTS RESERVED</span>&nbsp;<a href="/site/disclaimer/index.asp" class="A_10px">&nbsp;&nbsp;&nbsp;DISCLAIMER</a> &nbsp;&nbsp;&nbsp;<a href="/site/policy/index.asp" class="A_10px">PRIVACY POLICY</a><br>
+            <td height="70"><div align="center"><span class="style8">GOWEALTHY.COM © 2008. ALL RIGHTS RESERVED</span>&nbsp;<a href="/site/disclaimer/index.asp" class="A_10px">&nbsp;&nbsp;&nbsp;DISCLAIMER</a> &nbsp;&nbsp;&nbsp;<a href="/site/policy/index.asp" class="A_10px">PRIVACY POLICY</a><br>
               <br>
-                  <table width="325" border="0" cellpadding="0" cellspacing="0">
+                  <table width="500" border="0" cellpadding="0" cellspacing="0">
                     <tbody><tr>
+                      <td width="288"><img src="/images/general/microsoft_logo.jpg" alt="microsoft certified partner" width="90" height="44"></td>
                       <td width="288"><!--
 SiteSeal Html Builder Code:
 Shows the logo at URL https://seal.networksolutions.com/images/prorecblue.gif
 Logo type is  ("NETSP")
 //-->
 <script language="JavaScript" type="text/javascript"> SiteSeal("https://seal.networksolutions.com/images/prorecblue.gif", "NETSP", "none");</script></td>
-                      <td width="288"><a href="/site/policy/index.asp"><img src="/images/general/trust.gif" alt="Trust-e Approved" width="116" height="31" border="0" align="absmiddle"></a></td>
+                      <td width="288" align="center"><a href="/site/policy/index.asp"><img src="/images/general/trust.gif" alt="Trust-e Approved" width="116" height="31" border="0" align="absmiddle"></a></td>
                     </tr>
               </tbody></table>            
                   </div></td>
