--- a/c/cd/cdc/cdcovers.to.html
+++ b/c/cd/cdc/cdcovers.to.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cdcovers.to privacy policy that was archived on 2007-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071213135808id_/http%3A//www.cdcovers.to/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cdcovers.to privacy policy that was archived on 2008-01-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080113233409id_/http%3A//cdcovers.to/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html dir="ltr"><head>
     <title>CDcovers.to - cd covers, music and software</title>
