--- a/p/pr/pro/profootballhof.com.html
+++ b/p/pr/pro/profootballhof.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the profootballhof.com privacy policy that was archived on 2007-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071215001447id_/http%3A//www.profootballhof.com/hall/privacy_policy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the profootballhof.com privacy policy that was archived on 2008-01-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080115173219id_/http%3A//www.profootballhof.com/hall/privacy_policy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Pro Football Hall of Fame</title>
@@ -173,13 +173,13 @@
 			<div style="padding-left: 8px; margin-bottom: 7px;">
 			
 
-<div id="exclusives" width="728" style="display: none;">
+<div id="exclusives" width="728" style="display: block;">
 	<a href="/store/"><img src="/images/ads/exclusives.jpg" width="728" height="90" border="0" alt="Pro Football HOF Store Exclusives"></a><br>
 </div>
 
 
-<div id="2007_merch" width="728" style="display: none;">
-	<a href="/store/department.jsp?department_id=194"><img src="/images/ads/2007_merch.jpg" width="728" height="90" border="0" alt="2007 Class Merchandise"></a><br>
+<div id="exclusives" width="728" style="display: none;">
+	<a href="/store/"><img src="/images/ads/exclusives.jpg" width="728" height="90" border="0" alt="Pro Football HOF Store Exclusives"></a><br>
 </div>
 
 <div id="merchandise" width="728" style="display: none;">
@@ -187,7 +187,7 @@
 </div>
 
 
-<div id="team_gear" width="728" style="display: block;">
+<div id="team_gear" width="728" style="display: none;">
 	<a href="/store/"><img src="/images/ads/team_gear.jpg" width="728" height="90" border="0" alt="Pro Football HOF Team Gear"></a><br>
 </div>
 
@@ -201,7 +201,7 @@
 	
 	players[0] = 'exclusives';
 	
-		players[1] = '2007_merch';
+		players[1] = 'exclusives';
 	
 	players[2] = 'merchandise';
 	players[3] = 'team_gear';
@@ -492,7 +492,7 @@ B E G I N       F O O T E R       H E R E
 <table width="994" cellspacing="0" cellpadding="0" border="0">
 	<tbody><tr>
 		<td valign="top" style="padding: 5px;"><a href="http://www.americaneagle.com"><img src="/images/footer_ae.gif" width="378" height="38" border="0" alt="americaneagle.com"></a><br></td>
-		<td align="right" class="white smaller">© 2007 Pro Football Hall of Fame All rights reserved.<br> Do not duplicate in any form without permission of the Pro Football Hall of Fame.</td>
+		<td align="right" class="white smaller">© 2008 Pro Football Hall of Fame All rights reserved.<br> Do not duplicate in any form without permission of the Pro Football Hall of Fame.</td>
 	</tr>
 </tbody></table>
 <!-- WIDTH: 993 -->
