--- a/w/wr/wri/writerspenarticledirectory.com.html
+++ b/w/wr/wri/writerspenarticledirectory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the writerspenarticledirectory.com privacy policy that was archived on 2007-11-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071102190923id_/http%3A//www.writerspenarticledirectory.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the writerspenarticledirectory.com privacy policy that was archived on 2008-01-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080122150821id_/http%3A//www.writerspenarticledirectory.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -7,7 +7,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<title>Writer's Pen Article Directory</title>
+<title>Hacked by mpu_gandring</title>
 
 <link rel="Stylesheet" href="/mainstyle.css" type="text/css" media="screen">
 
@@ -71,7 +71,7 @@ location.href = mail_str;
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.marketingarticlelibrary.com/adserver/adjs.php?n=482083124&amp;what=zone:9&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.marketingarticlelibrary.com/adserver/adclick.php?n=a60cde47' target='blank'><img src='http://www.marketingarticlelibrary.com/adserver/adview.php?what=zone:9&amp;n=a60cde47' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.marketingarticlelibrary.com/adserver/adjs.php?n=204565895&amp;what=zone:9&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://www.marketingarticlelibrary.com/adserver/adclick.php?n=a60cde47' target='blank'><img src='http://www.marketingarticlelibrary.com/adserver/adview.php?what=zone:9&amp;n=a60cde47' border='0' alt=''></a></noscript>
 
 </center>
 		 </td>
