domainmonster.com (archived on 2008-01-25)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 10558,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.82,
  "homepage_snapshot_redirected_domain": "domainmonster.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080405194634id_/http://www.domainmonster.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080405194634id_/http%3A//domainmonster.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "domainmonster.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080125141546id_/http%3A//www.domainmonster.com/privacy",
  "policy_title": "Domain Name Registration - Bulk Discount Domain Names & Domain Name Registration Services",
  "policy_url": "domainmonster.com/privacy",
  "sha1": "cd9628988e5999184215cba23228754f409afa9c",
  "simhash": 4432814306004419353,
  "simhash_updated": true,
  "site_hostname": "domainmonster.com",
  "site_url": "http://domainmonster.com",
  "smog": 16.57,
  "strict_updated": true,
  "timestamp": "20080125141546",
  "word_count": 1699,
  "year": 2008
}

--- a/d/do/dom/domainmonster.com.html
+++ b/d/do/dom/domainmonster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the domainmonster.com privacy policy that was archived on 2007-10-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071009155301id_/http%3A//www.domainmonster.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the domainmonster.com privacy policy that was archived on 2008-01-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080125141546id_/http%3A//www.domainmonster.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Pragma" content="no-cache">
@@ -29,14 +29,14 @@
 
 <body>
 <map name="home" id="home">
-	<area shape="rect" coords="0,20,215,90" href="http://www.domainmonster.com" title="Domainmonster.com">
+	<area shape="rect" coords="0,20,215,90" href="http://www.domainmonster.com" title="Domainmonster - Domain Name Registration">
 </map>
 <div id="header"><a name="top"></a>
 	<div id="headerContent"><img src="/images/header_d.gif" alt="Domain Monster - Domain Name Registration Services" border="0" align="top" usemap="#home" title="Domain Monster - Domain Name Registration Services">
 <ul class="login">
 	
-	<li><a href="https://www.domainmonster.com/login/"><img src="/images/new_login.gif" alt="Login" title="Login"></a></li>
-	<li><a href="http://www.domainmonster.com/contact/"><img src="/images/new_contact.gif" alt="Contact Us" title="Contact Us"></a></li>
+	<li><a href="https://www.domainmonster.com/login/" rel="nofollow"><img src="/images/new_login.gif" alt="Login" title="Login"></a></li>
+	<li><a href="http://www.domainmonster.com/contact/" rel="nofollow"><img src="/images/new_contact.gif" alt="Contact Us" title="Contact Us"></a></li>
 	
 </ul>
 	
@@ -49,20 +49,20 @@
 <div id="menu">
 	<ul id="navigation">
 	<li><a href="http://www.domainmonster.com/" title="Go to the Domainmonster.com home page">Home</a></li>
-	<li><a href="http://www.domainmonster.com/domain_registration/" title="Domain Registration from Domainmonster.com">Domain Registration</a></li>
+	<li><a href="http://www.domainmonster.com/domain_registration/" title="Domain Registration">Domain Registration</a></li>
 	<li><a href="http://www.domainmonster.com/transfer/" title="Free Domain Transfer">Transfer To Us</a></li>
 	<li><a href="http://www.domainmonster.com/renew/" title="Domain Renewal">Renew With Us</a></li>
 	<li><a href="http://www.domainmonster.com/backorder/" title="Back Order Domains">Back Order Domains</a></li>
 	<li><a href="http://www.domainmonster.com/partner/" title="Partner Program">Partner Program</a></li>
 	<li><a href="http://www.domainmonster.com/prices/" title="Price List &amp; Info">Price List &amp; Info</a></li>
 	<li><a href="http://www.domainmonster.com/domain_services/" title="Domain Service Features">Domain Services</a></li>
-	<li><a href="http://www.domainmonster.com/support/" title="Domain Support">Support</a></li>
+	<li><a href="http://www.domainmonster.com/support/" rel="nofollow" title="Domain Support">Support</a></li>
 	<li><a href="http://faq.domainmonster.com/" title="Frequently Asked Questions">FAQs</a></li>
-	<li><a href="http://www.domainmonster.com/company/" title="About Domainmonster.com">Our Company</a></li>
-	<li><a href="http://www.domainmonster.com/contact/" title="Contact Domainmonster.com">Contact Us</a></li>
+	<li><a href="http://www.domainmonster.com/company/" rel="nofollow" title="About Domainmonster.com">Our Company</a></li>
+	<li><a href="http://www.domainmonster.com/contact/" rel="nofollow" title="Contact Domainmonster.com">Contact Us</a></li>
 	<li id="navmemberitem">
 	
-	<a href="https://www.domainmonster.com/members/" title="Your Domain Monster">Member Login</a>
+	<a href="https://www.domainmonster.com/members/" rel="nofollow" title="Your Domain Monster">Member Login</a>
 	
 	</li>
 	
@@ -74,7 +74,7 @@
 
 
 
-	<a href="https://www.domainmonster.com/geotrust/" title="Geotrust secured. Click to Verify." id="geotrustlogo"><img src="/images/geotrust.gif" alt="Geotrust secured. Click to Verify." border="0"></a>
+	<a href="https://www.domainmonster.com/geotrust/" rel="nofollow" title="Geotrust secured. Click to Verify." id="geotrustlogo"><img src="/images/geotrust.gif" alt="Geotrust secured. Click to Verify." border="0"></a>
 	</div>
 </div>
 
@@ -126,11 +126,11 @@
 <div id="footer">
 	<ul>
 		<li>
-		<a href="http://www.domainmonster.com" title="Copyright Domainmonster.com Inc.">© Domainmonster.com Inc 2007</a>
+		<a href="http://www.domainmonster.com" title="Copyright Domainmonster.com Inc.">© Domainmonster.com Inc 2008</a>
 		</li>
-		<li><a href="http://www.domainmonster.com/terms/" title="View our Terms and Conditions">Terms &amp; Conditions</a></li>
-		<li><a href="http://www.domainmonster.com/privacy/" title="View our Privacy Policy">Privacy Policy</a></li>
-		<li><a href="http://www.domainmonster.com/credits/" title="Who built our site">Credits</a></li>
+		<li><a href="http://www.domainmonster.com/terms/" rel="nofollow" title="View our Terms and Conditions">Terms &amp; Conditions</a></li>
+		<li><a href="http://www.domainmonster.com/privacy/" rel="nofollow" title="View our Privacy Policy">Privacy Policy</a></li>
+		<li><a href="http://www.domainmonster.com/credits/" rel="nofollow" title="Who built our site">Credits</a></li>
 		<li><a href="http://www.domainmonster.com/sitemap/" title="Site Map">Site Map</a></li>
 	</ul>
 	<ul style="padding-bottom:10px; ">
