--- a/i/ir/iri/irishrail.ie.html
+++ b/i/ir/iri/irishrail.ie.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the irishrail.ie privacy policy that was archived on 2007-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071224020255id_/http%3A//www.irishrail.ie/home/privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the irishrail.ie privacy policy that was archived on 2008-02-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080206221808id_/http%3A//www.irishrail.ie/home/privacy_statement.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Irish Rail - Iarnród Éireann - train tickets, train times, Ireland rail travel information</title>
-
+<script type="text/javascript" src="../include/effects/js/jquery.js"></script> 
+<script type="text/javascript" src="../include/effects/js/thickbox.js"></script>
 
 <script language="JavaScript" src="../include/fieldValidation.js"></script>
 <meta name="verify-v1" content="6P06o8EAKdyqE08Hr0NnOCN5Rqfe4rOmQSTdkFqxrQw="> 
@@ -311,7 +312,24 @@ a.contact_titlelink{
 }
 
 
+.displayTable{
+            border-collapse:collapse;
+            border:solid 1px #000000;	
+}
 
+.displayTable td{
+            border:solid 1px #000000;
+            padding:2px;
+}
+
+#home-middle-panel a{
+	color: #000000;
+}
+
+
+#home-middle-panel a:hover{
+	color: #86b918;
+}
 
 
 
