brainfall.com (archived on 2008-02-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 13177,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.34,
  "homepage_snapshot_redirected_domain": "brainfall.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080309185954id_/http://brainfall.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080309185954id_/http%3A//brainfall.com",
  "interval": "2008_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "brainfall.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080208165732id_/http%3A//www.brainfall.com/privacy.php",
  "policy_title": "BrainFall.com - Personality Tests for College Students",
  "policy_url": "brainfall.com/privacy.php",
  "sha1": "cf0cf0b3ee88808e262bfdfa81ff5b913e00a4a4",
  "simhash": 7784715675184266199,
  "simhash_updated": true,
  "site_hostname": "brainfall.com",
  "site_url": "http://brainfall.com",
  "smog": 15.69,
  "strict_updated": true,
  "timestamp": "20080208165732",
  "word_count": 2107,
  "year": 2008
}

--- a/b/br/bra/brainfall.com.html
+++ b/b/br/bra/brainfall.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brainfall.com privacy policy that was archived on 2007-10-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071016065705id_/http%3A//www.brainfall.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brainfall.com privacy policy that was archived on 2008-02-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080208165732id_/http%3A//www.brainfall.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -606,28 +606,32 @@ Privacy
 </tbody></table>
 <div class="footer">
 <div>
-<script type="text/javascript">
-   e9 = new Object();
-   e9.size = "728x90,468x60";
-   e9.noAd = 1;
-</script>
-<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/Brainfallcom/ROS/tags.js"></script></div>
+<script src="http://tag.contextweb.com/TagPublish/getjs.aspx?action=VIEWAD&amp;cwrun=200&amp;cwadformat=728X90&amp;cwpid=502344&amp;cwwidth=728&amp;cwheight=90&amp;cwpnet=1&amp;cwtagid=11469"></script></div>
 <div>
-<!-- Begin: AdBrite --> 
+<!-- Begin: AdBrite 
 <style type="text/css">
    .adHeadline {font: bold 10pt Arial; text-decoration: underline; color: #0000FF;}
    .adText {font: normal 10pt Arial; text-decoration: none; color: #000000;}
 </style> 
-<script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=397643&amp;br=1&amp;dk=7469636b6574735f365f325f776562&amp;col=3 ">
+<script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=397643&br=1&dk=7469636b6574735f365f325f776562&col=3 ">
 </script>
-<div><a class="adHeadline" target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=397643&amp;afsid=1 ">Your Ad Here</a></div>
-<!-- End: AdBrite -->
+<div><a class="adHeadline" target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=397643&afsid=1 ">Your Ad Here</a></div>
+End: AdBrite -->
 </div>
 <br><br><!-- google_ad_section_start(weight=ignore) -->
 Copyright 2007 Brainfall.com, Inc.<br>Please read our <a href="http://www.brainfall.com/termsofservice.php">Terms of Service</a>.<br><br>
 <!--Images and characters are the properties of their respective owners.<br />-->
 <a href="http://www.brainfall.com/feedback.php">Questions/Comments?</a><br><br>
 </div>
+<!--Start Sidebar Ad tag -->
+<div style="position: absolute; top: 370px; left: 15px;"><script src="http://tag.contextweb.com/TagPublish/getjs.aspx?action=VIEWAD&amp;cwrun=200&amp;cwadformat=160X600&amp;cwpid=502344&amp;cwwidth=160&amp;cwheight=600&amp;cwpnet=1&amp;cwtagid=11470"></script></div>
+<!-- Start Quantcast tag -->
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<script type="text/javascript">
+_qacct="p-12AmG0LyesoS2";quantserve();</script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-12AmG0LyesoS2.gif" style="display: none" height="1" width="1" alt="Quantcast"/></noscript>
+<!-- End Quantcast tag -->
 <!-- google_ad_section_end -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
@@ -637,6 +641,13 @@ urchinTracker();
 </script>
 <!--<script src="http://statisfy.net/javascripts/stats.js"></script>
 <script type="text/javascript">statisfy('AtbdtxiCO5FNhZkaWCjUFqjmmGjmPur4');</script>-->
+<!-- Start Quantcast tag -->
+<script type="text/javascript" src=" http://edge.quantserve.com/quant.js"></script>
+<script type="text/javascript">_qacct="p-9bejd8hEEWP76";quantserve();</script>
+<noscript>
+<a href=" http://www.quantcast.com/p-9bejd8hEEWP76" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-9bejd8hEEWP76.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
+</noscript>
+<!-- End Quantcast tag -->
 </div>
 </div></div>
 
