--- a/g/go/gol/goldencan.com.html
+++ b/g/go/gol/goldencan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goldencan.com privacy policy that was archived on 2007-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071211053600id_/http%3A//www.goldencan.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goldencan.com privacy policy that was archived on 2008-02-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080210144228id_/http%3A//www.goldencan.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 TRANSITIONAL//EN"><html><head>
 		<title>GoldenCAN Privacy Policy</title>
@@ -12,10 +12,10 @@
 	</head>
 	<body bottommargin="0" leftmargin="5" topmargin="0" rightmargin="5">
 		<form name="Form1" method="post" action="privacy.aspx" id="Form1">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTE0NTY4MTY4MjAPZBYCZg9kFgICAQ9kFgJmDw8WBB4LTmF2aWdhdGVVcmwFCy9sb2dpbi5hc3B4HgRUZXh0BQdMb2dpbiB8ZGRkU/qY6F6gLXPJT/5qHU79kwynFxg=">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTE0NTY4MTY4MjAPZBYCZg9kFgICAQ9kFgJmDw8WBB4LTmF2aWdhdGVVcmwFJGh0dHBzOi8vd3d3LmdvbGRlbmNhbi5jb20vbG9naW4uYXNweB4EVGV4dAUHTG9naW4gfGRkZApZBPHIiI8hXzxdQZOZWbtuji/U">
 
 			
-<table border="0" cellpadding="0" cellspacing="0" width="760" align="center">
+<table border="0" cellpadding="0" cellspacing="0" width="900" align="center">
 	<tbody><tr>
 		<td>
 			<table border="0" cellpadding="6" cellspacing="0" width="100%">
@@ -24,7 +24,7 @@
 						<a href="/">
 							<img border="0" src="/images/logo3.gif"></a></td>
 					<td align="right">
-						<a href="/merchants/display_24.aspx"><img src="/images/mbanner/24.gif" border="0"></a>
+						<a href="/merchants/display_66.aspx"><img src="/images/mbanner/66.gif" border="0"></a>
 					</td>
 				</tr>
 			</tbody></table>
@@ -35,7 +35,7 @@
 							<tbody><tr>
 								<td align="center">
 									<font face="Arial" size="2"><a href="/">Home</a> |
-										<a id="Header1_lnkLogin" href="/login.aspx">Login |</a>
+										<a id="Header1_lnkLogin" href="https://www.goldencan.com/login.aspx">Login |</a>
 										<a href="/Manage/">My Account</a> |
 										<a id="Header1_lnkNewAffiliates" href="/newuser.aspx">New Affiliates |</a>
 										<a id="Header1_lnkExamples" href="/samples.aspx">Examples |</a>
